split up scss files

--- a/server/views/error.jade
+++ b/server/views/error.jade
@@ -2,7 +2,7 @@ doctype html
 html
 	head
 		title Error
-		link(rel='stylesheet', href='/scss/error.css')
+		link(rel='stylesheet', href='/css/error.css')
 	body
 		block content
 			h1= error.status
