--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -1,10 +1,4 @@
-
-$color: #888;
-
-html, body {
-	background-color: $color;
-	height: 100%;
-}
+@import 'base';
 
 li[ng-click] {
 	cursor: pointer;
