--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -53,7 +53,7 @@
 }
 
 .pre {
-	white-space: pre;
+	white-space: pre-wrap;
 }
 
 .test-buttons {
@@ -63,4 +63,12 @@
 .top-error {
 	margin-top: 5px;
 	margin-bottom: 5px !important;
+}
+
+.faded {
+	opacity: 0.5;
+}
+
+.error {
+	color: $errorColor;
 }
