tasks are displayed in a simple list fragment and can be refreshed

--- a/android/TurnTracker/app/src/main/res/layout/content_main.xml
+++ b/android/TurnTracker/app/src/main/res/layout/content_main.xml
@@ -9,9 +9,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
     tools:context="me.geniusburger.turntracker.MainActivity">
 
-    <ListView
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/taskListView"
-        tools:listitem="@android:layout/simple_list_item_1" />
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 </RelativeLayout>
