--- a/android/TurnTracker/app/src/main/res/layout/fragment_task_list.xml
+++ b/android/TurnTracker/app/src/main/res/layout/fragment_task_list.xml
@@ -4,13 +4,21 @@
     android:layout_height="match_parent" tools:context="me.geniusburger.turntracker.TaskFragment">
 
     <ListView android:id="@android:id/list" android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:listitem="@android:layout/simple_list_item_1" />
 
     <TextView android:id="@android:id/empty" android:layout_width="match_parent"
         android:layout_height="match_parent" android:gravity="center" android:onClick="refreshTasks" />
 
-    <ProgressBar android:id="@+id/progress" style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_gravity="center" android:visibility="gone"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/progress"
+        android:background="@color/progressBackground"
+        android:visibility="gone">
+        <ProgressBar style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+    </FrameLayout>
 
 </FrameLayout>
