--- a/android/TurnTracker/app/src/main/res/values/refs.xml
+++ b/android/TurnTracker/app/src/main/res/values/refs.xml
@@ -9,4 +9,13 @@
     -->
     <item name="fragment_task" type="layout">@layout/fragment_task_list</item>
 
+    <!--
+    Layout alias to replace the single-pane version of the layout with a
+    two-pane version on Large screens.
+
+    For more on layout aliases, see:
+    http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
+    -->
+    <item name="fragment_turn" type="layout">@layout/fragment_turn_list</item>
+
 </resources>
