Display individual turns and clean the fragments when logging out

--- a/android/TurnTracker/app/src/main/res/layout/fragment_turn_list.xml
+++ b/android/TurnTracker/app/src/main/res/layout/fragment_turn_list.xml
@@ -3,12 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="me.geniusburger.turntracker.TurnFragment">
 
-    <ListView android:id="@android:id/list" android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@android:layout/simple_list_item_1" />
+    <LinearLayout
+        android:id="@+id/lists"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView android:id="@android:id/empty" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:gravity="center" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <ListView android:id="@+id/userlist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@android:layout/simple_list_item_1" />
+            <TextView android:id="@+id/userempty" android:layout_width="match_parent"
+                android:layout_height="match_parent" android:gravity="center" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <ListView android:id="@+id/turnlist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@android:layout/simple_list_item_1" />
+            <TextView android:id="@+id/turnempty" android:layout_width="match_parent"
+                android:layout_height="match_parent" android:gravity="center" />
+        </FrameLayout>
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
