Can undo a turn right after it's taken. Can now pull down to refresh tasks. Provided more useful errors on login. Provided settings.

--- a/android/TurnTracker/app/src/main/res/layout/fragment_task_grid.xml
+++ b/android/TurnTracker/app/src/main/res/layout/fragment_task_grid.xml
@@ -3,21 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="me.geniusburger.turntracker.TaskFragment">
 
-    <GridView android:id="@android:id/list" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:numColumns="2"
-        tools:listitem="@android:layout/simple_list_item_1" />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
+        android:layout_width="match_parent" android:layout_height="match_parent">
+        <GridView android:id="@android:id/list" android:layout_width="match_parent"
+            android:layout_height="match_parent" android:numColumns="2"
+            tools:listitem="@android:layout/simple_list_item_1" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
-    <TextView android:id="@android:id/empty" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:gravity="center" android:onClick="refreshTasks" />
-
-    <FrameLayout
+    <TextView android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/progress"
-        android:background="@color/progressBackground"
-        android:visibility="gone">
-        <ProgressBar style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
-    </FrameLayout>
+        android:gravity="center"
+        android:onClick="refreshTasks" />
+
 </FrameLayout>
