--- a/android/TurnTracker/app/src/main/res/layout/activity_login.xml
+++ b/android/TurnTracker/app/src/main/res/layout/activity_login.xml
@@ -6,19 +6,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
 
+    <!-- Login progress -->
+    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:visibility="gone" android:layout_marginTop="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center_horizontal"/>
+
     <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true">
 
 
-        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
+        <LinearLayout android:layout_width="match_parent"
             android:layout_height="wrap_content" android:orientation="vertical">
-
-            <!-- Login progress -->
-            <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"
-                android:visibility="gone" android:layout_marginTop="16dp"
-                android:layout_gravity="center_horizontal"/>
 
             <ImageView android:src="@drawable/ic_launcher"
                 android:layout_width="wrap_content"
@@ -43,6 +44,12 @@
                 android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:layout_marginTop="16dp" android:text="@string/action_sign_in_short"
                 android:textStyle="bold" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/settings_button"
+                android:src="@drawable/ic_settings_24dp"/>
 
         </LinearLayout>
     </ScrollView>
