--- a/android/TurnTracker/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android/TurnTracker/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
     </group>
 
     <group>
-        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_preferences" android:title="Settings"/>
+        <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings_24dp" android:title="Settings"/>
         <item android:id="@+id/nav_logout" android:title="Logout"/>
     </group>
 
