--- a/android/TurnTracker/app/src/main/res/xml/pref_headers.xml
+++ b/android/TurnTracker/app/src/main/res/xml/pref_headers.xml
@@ -4,15 +4,11 @@
 
     <header
         android:fragment="me.geniusburger.turntracker.SettingsActivity$GeneralPreferenceFragment"
-        android:title="@string/pref_header_general" android:icon="@drawable/ic_info_black_24dp" />
+        android:title="@string/pref_header_general" android:icon="@drawable/ic_info_24dp" />
 
     <header
         android:fragment="me.geniusburger.turntracker.SettingsActivity$NotificationPreferenceFragment"
         android:title="@string/pref_header_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp" />
-
-    <header
-        android:fragment="me.geniusburger.turntracker.SettingsActivity$DataSyncPreferenceFragment"
-        android:title="@string/pref_header_data_sync" android:icon="@drawable/ic_sync_black_24dp" />
+        android:icon="@drawable/ic_notifications_24dp" />
 
 </preference-headers>
