--- a/android/TurnTracker/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android/TurnTracker/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group>
-        <item android:id="@+id/nav_tasks" android:icon="@android:drawable/ic_menu_agenda" android:title="Tasks"/>
+        <item android:id="@+id/nav_tasks" android:icon="@drawable/ic_list_24dp" android:title="Tasks"/>
     </group>
 
     <group>
         <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings_24dp" android:title="Settings"/>
-        <item android:id="@+id/nav_logout" android:title="Logout"/>
+        <item android:id="@+id/nav_logout" android:icon="@drawable/ic_logout_24dp" android:title="Logout"/>
     </group>
 
 </menu>
