--- a/android/TurnTracker/app/src/main/res/xml/pref_general.xml
+++ b/android/TurnTracker/app/src/main/res/xml/pref_general.xml
@@ -8,8 +8,14 @@
         android:defaultValue="@string/pref_default_server_ip"
         android:selectAllOnFocus="true"
         android:inputType="phone"
-        android:capitalize="words"
-        android:singleLine="true"
-        android:maxLines="1" />
+        android:singleLine="true" />
+
+    <EditTextPreference
+        android:key="server.port"
+        android:title="@string/pref_title_server_port"
+        android:defaultValue="@string/pref_default_server_port"
+        android:selectAllOnFocus="true"
+        android:inputType="number"
+        android:singleLine="true" />
 
 </PreferenceScreen>
