--- a/android/TurnTracker/app/src/main/res/layout/fragment_turn_list.xml
+++ b/android/TurnTracker/app/src/main/res/layout/fragment_turn_list.xml
@@ -20,10 +20,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-            <ListView android:id="@+id/userlist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:listitem="@android:layout/simple_list_item_1" />
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/userswipe"
+                android:layout_width="match_parent" android:layout_height="wrap_content">
+                <ListView android:id="@+id/userlist"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:listitem="@android:layout/simple_list_item_1" />
+            </android.support.v4.widget.SwipeRefreshLayout>
             <TextView android:id="@+id/userempty" android:layout_width="match_parent"
                 android:layout_height="match_parent" android:gravity="center" />
         </FrameLayout>
@@ -39,10 +43,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2">
-            <ListView android:id="@+id/turnlist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:listitem="@android:layout/simple_list_item_1" />
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/turnswipe"
+                android:layout_width="match_parent" android:layout_height="wrap_content">
+                <ListView android:id="@+id/turnlist"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:listitem="@android:layout/simple_list_item_1" />
+            </android.support.v4.widget.SwipeRefreshLayout>
             <TextView android:id="@+id/turnempty" android:layout_width="match_parent"
                 android:layout_height="match_parent" android:gravity="center" />
         </FrameLayout>
