--- a/android/TurnTracker/app/src/main/res/values/colors.xml
+++ b/android/TurnTracker/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#9E9E9E</color>
     <color name="colorPrimaryDark">#616161</color>
     <color name="colorAccent">#448AFF</color>
-    <color name="progressBackground">#AAFFFFFF</color>
+    <color name="colorText">#000000</color>
 </resources>
