--- a/android/TurnTracker/app/src/main/res/layout/app_bar_main.xml
+++ b/android/TurnTracker/app/src/main/res/layout/app_bar_main.xml
@@ -21,6 +21,6 @@
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_24dp" android:tint="#FFFFFF" />
+        android:src="@drawable/ic_add_24dp" android:tint="@color/colorAccentText" />
 
 </android.support.design.widget.CoordinatorLayout>
