--- a/android/TurnTracker/app/src/main/res/layout/fragment_turn_list.xml
+++ b/android/TurnTracker/app/src/main/res/layout/fragment_turn_list.xml
@@ -7,7 +7,9 @@
     tools:context="me.geniusburger.turntracker.TurnFragment">
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe"
-        android:layout_width="match_parent" android:layout_height="wrap_content">
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp">
         <ListView android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
