Take a turn at a particular date/time as long as it isn't in the future

--- a/android/TurnTracker/app/src/main/res/menu/turn_fragment.xml
+++ b/android/TurnTracker/app/src/main/res/menu/turn_fragment.xml
@@ -2,5 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
-        android:orderInCategory="100" app:showAsAction="always" android:icon="@drawable/ic_refresh_24dp" />
+        android:orderInCategory="101" app:showAsAction="always" android:icon="@drawable/ic_refresh_24dp" />
+    <item android:id="@+id/action_pick_turn_date" android:title="Turn Date"
+        android:orderInCategory="100" app:showAsAction="always" android:icon="@drawable/ic_calendar_24dp" />
 </menu>
