--- a/android/TurnTracker/app/src/main/res/layout/fragment_edit_task_header.xml
+++ b/android/TurnTracker/app/src/main/res/layout/fragment_edit_task_header.xml
@@ -17,4 +17,17 @@
             android:inputType="number" android:maxLines="1" android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/user_list_label"
+        android:id="@+id/subHeaderTextView"
+        android:layout_marginTop="10dp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorAccent"/>
+
 </LinearLayout>
