--- a/android/TurnTracker/app/src/main/res/xml/pref_headers.xml
+++ b/android/TurnTracker/app/src/main/res/xml/pref_headers.xml
@@ -3,12 +3,12 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="me.geniusburger.turntracker.SettingsActivity$GeneralPreferenceFragment"
-        android:title="@string/pref_header_general" android:icon="@drawable/ic_info_24dp" />
+        android:fragment="me.geniusburger.turntracker.SettingsActivity$NetworkPreferenceFragment"
+        android:title="@string/pref_header_network" android:icon="@drawable/ic_cloud_24dp" />
 
-    <header
-        android:fragment="me.geniusburger.turntracker.SettingsActivity$NotificationPreferenceFragment"
-        android:title="@string/pref_header_notifications"
-        android:icon="@drawable/ic_notifications_24dp" />
+    <!--<header-->
+        <!--android:fragment="me.geniusburger.turntracker.SettingsActivity$NotificationPreferenceFragment"-->
+        <!--android:title="@string/pref_header_notifications"-->
+        <!--android:icon="@drawable/ic_notifications_24dp" />-->
 
 </preference-headers>
