--- a/android/TurnTracker/app/src/main/res/layout/fragment_edit_task.xml
+++ b/android/TurnTracker/app/src/main/res/layout/fragment_edit_task.xml
@@ -16,6 +16,8 @@
         <ListView android:id="@android:id/list" android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:choiceMode="multipleChoice"
+            android:paddingBottom="88dp"
+            android:clipToPadding="false"
             tools:listitem="@android:layout/simple_list_item_multiple_choice" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
