--- a/android/TurnTracker/app/src/main/res/layout/status_list_header.xml
+++ b/android/TurnTracker/app/src/main/res/layout/status_list_header.xml
@@ -5,7 +5,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/notificationImageView"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/notifications_enabled_description"
         android:src="@drawable/ic_notifications_24dp" />
@@ -35,6 +37,7 @@
         android:textColor="@color/colorText"
         android:id="@+id/periodTextView"
         android:layout_below="@+id/periodLabel"
+        android:hint="2 days"
         android:layout_alignParentStart="true" />
 
     <TextView
@@ -44,5 +47,32 @@
         android:textColor="@color/colorText"
         android:id="@+id/creatorTextView"
         android:layout_below="@+id/creatorLabel"
+        android:hint="Gary"
         android:layout_alignParentEnd="true" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/notificationImageView"
+        android:layout_centerHorizontal="true">
+
+        <Chronometer
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/elapsedChronometer"
+            android:textColor="@color/colorAccent"
+            android:layout_marginRight="10dp"
+            android:textSize="18sp" />
+
+        <Chronometer
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/exceededChronometer"
+            android:textColor="@android:color/holo_red_light"
+            android:format="+%s"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
 </RelativeLayout>
