--- a/android/TurnTracker/app/src/main/res/layout/status_list_header.xml
+++ b/android/TurnTracker/app/src/main/res/layout/status_list_header.xml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/notificationImageView"
+
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
+        android:id="@+id/notificationBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="@string/notifications_enabled_description"
-        android:src="@drawable/ic_notifications_24dp" />
+        android:layout_centerHorizontal="true">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="25dp"
+            android:focusable="true"
+            android:id="@+id/notificationImageView"
+            android:contentDescription="@string/notifications_enabled_description"
+            android:src="@drawable/ic_notifications_24dp" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:id="@+id/reminderImageView"
+            android:contentDescription="@string/reminders_enabled_description"
+            android:src="@drawable/ic_alarm_on_24dp" />
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,7 +72,7 @@
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/notificationImageView"
+        android:layout_below="@+id/notificationBar"
         android:layout_centerHorizontal="true">
 
         <Chronometer
