--- a/android/TurnTracker/app/src/main/res/xml/pref_headers.xml
+++ b/android/TurnTracker/app/src/main/res/xml/pref_headers.xml
@@ -6,9 +6,9 @@
         android:fragment="me.geniusburger.turntracker.SettingsActivity$NetworkPreferenceFragment"
         android:title="@string/pref_header_network" android:icon="@drawable/ic_cloud_24dp" />
 
-    <!--<header-->
-        <!--android:fragment="me.geniusburger.turntracker.SettingsActivity$NotificationPreferenceFragment"-->
-        <!--android:title="@string/pref_header_notifications"-->
-        <!--android:icon="@drawable/ic_notifications_24dp" />-->
+    <header
+        android:fragment="me.geniusburger.turntracker.SettingsActivity$NotificationPreferenceFragment"
+        android:title="@string/pref_header_notifications"
+        android:icon="@drawable/ic_notifications_24dp" />
 
 </preference-headers>
