--- a/android/TurnTracker/app/src/main/res/layout/activity_main.xml
+++ b/android/TurnTracker/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,19 @@
     <include layout="@layout/app_bar_main" android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.NavigationView android:id="@+id/nav_view"
-        android:layout_width="wrap_content" android:layout_height="match_parent"
-        android:layout_gravity="start" android:fitsSystemWindows="true"
-        app:menu="@menu/activity_main_drawer" />
+        <android.support.design.widget.NavigationView android:id="@+id/nav_view"
+            android:layout_width="wrap_content" android:layout_height="match_parent"
+            android:layout_gravity="start" android:fitsSystemWindows="true"
+            app:menu="@menu/activity_main_drawer">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/versionTextView"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="5dp"
+                android:text="Version"
+                android:layout_gravity="bottom"/>
+        </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
