--- a/android/TurnTracker/app/src/main/res/layout/content_main.xml
+++ b/android/TurnTracker/app/src/main/res/layout/content_main.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/app_bar_main"
     tools:context="me.geniusburger.turntracker.MainActivity">
 
     <FrameLayout
