--- a/android/TurnTracker/app/src/main/res/layout/activity_main.xml
+++ b/android/TurnTracker/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/versionTextView"
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="5dp"
-                android:text="Version"
+                tools:text="Version: 0.2.5"
                 android:layout_gravity="bottom"/>
         </android.support.design.widget.NavigationView>
 
