--- a/android/TurnTracker/app/src/main/res/layout/fragment_edit_task_header.xml
+++ b/android/TurnTracker/app/src/main/res/layout/fragment_edit_task_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,12 +11,25 @@
              android:inputType="text" android:maxLines="1" android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <EditText android:id="@+id/periodEditText" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:hint="@string/prompt_period"
-            android:inputType="number" android:maxLines="1" android:singleLine="true" />
-    </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout android:layout_width="0dp" android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <EditText android:id="@+id/periodEditText" android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:hint="@string/prompt_period"
+                android:inputType="number" android:maxLines="1" android:singleLine="true" />
+        </android.support.design.widget.TextInputLayout>
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/unitSpinner"
+            tools:listitem="@android:layout/simple_spinner_item"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
