--- a/android/TurnTracker/app/src/main/res/layout/nav_header_main.xml
+++ b/android/TurnTracker/app/src/main/res/layout/nav_header_main.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="@dimen/nav_header_height"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/nav_header_height"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/side_nav_bar"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark" android:orientation="vertical"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:orientation="vertical"
     android:gravity="bottom">
 
     <ImageView android:layout_width="72dp" android:layout_height="72dp"
@@ -14,11 +17,11 @@
         android:src="@drawable/ic_launcher" android:id="@+id/imageView" />
 
     <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="Display Name"
+        android:paddingTop="@dimen/nav_header_vertical_spacing" tools:text="Joe Smith"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:id="@+id/displayNameTextView"/>
 
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="username" android:id="@+id/userNameTextView" />
+        tools:text="joe83" android:id="@+id/userNameTextView" />
 
 </LinearLayout>
