--- a/android/TurnTracker/app/src/main/res/layout/status_list_header.xml
+++ b/android/TurnTracker/app/src/main/res/layout/status_list_header.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="25dp"
+            android:layout_marginEnd="15dp"
             android:focusable="true"
             android:id="@+id/notificationImageView"
             android:contentDescription="@string/notifications_enabled_description"
@@ -25,6 +25,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
             android:focusable="true"
             android:id="@+id/reminderImageView"
             android:contentDescription="@string/reminders_enabled_description"
@@ -82,7 +83,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/elapsedChronometer"
             android:textColor="@color/colorAccent"
-            android:layout_marginEnd="10dp"
             android:textSize="18sp" />
 
         <Chronometer
