--- a/android/TurnTracker/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android/TurnTracker/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,4 +10,8 @@
         <item android:id="@+id/nav_logout" android:icon="@drawable/ic_logout_24dp" android:title="Logout"/>
     </group>
 
+    <group>
+        <item android:id="@+id/nav_notify" android:icon="@drawable/ic_notifications_24dp" android:title="Notify"/>
+    </group>
+
 </menu>
