--- a/android/TurnTracker/app/src/main/res/menu/edit_task_fragment.xml
+++ b/android/TurnTracker/app/src/main/res/menu/edit_task_fragment.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
         android:orderInCategory="101" app:showAsAction="ifRoom" android:icon="@drawable/ic_refresh_24dp" />
-    <item android:id="@+id/action_delete" android:title="@string/action_refresh"
+    <item android:id="@+id/action_delete" android:title="@string/action_delete"
         android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@drawable/ic_delete_24dp" />
+    <item android:id="@+id/action_info" android:title="@string/action_info"
+        android:orderInCategory="99" app:showAsAction="ifRoom" android:icon="@drawable/ic_info_outline_24dp" />
 </menu>
