--- a/android/TurnTracker/app/src/main/res/layout/task_info_dialog.xml
+++ b/android/TurnTracker/app/src/main/res/layout/task_info_dialog.xml
@@ -10,17 +10,15 @@
         android:layout_centerInParent="true"
         android:paddingTop="10dp"
         android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:stretchColumns="*">
+        android:paddingEnd="5dp">
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:weightSum="1"
             android:layout_marginBottom="5dp">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:layout_gravity="end"
@@ -29,7 +27,7 @@
                 android:text="@string/label_id" />
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:paddingStart="5dp"
@@ -39,13 +37,12 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:weightSum="1"
             android:layout_marginBottom="5dp">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:layout_gravity="end"
@@ -54,7 +51,7 @@
                 android:text="@string/label_creator" />
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:paddingStart="5dp"
@@ -64,13 +61,12 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:weightSum="1"
             android:layout_marginBottom="5dp">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:layout_gravity="end"
@@ -79,7 +75,7 @@
                 android:text="@string/label_created"/>
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:paddingStart="5dp"
@@ -89,12 +85,11 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:layout_gravity="end"
@@ -103,7 +98,7 @@
                 android:text="@string/label_modified"/>
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:paddingStart="5dp"
