--- a/android/TurnTracker/app/src/main/res/layout/fragment_turn_list.xml
+++ b/android/TurnTracker/app/src/main/res/layout/fragment_turn_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.geniusburger.turntracker.TurnFragment">
+    tools:context=".StatusFragment">
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe"
         android:layout_width="match_parent" android:layout_height="wrap_content"
